--- a/day14/p1/js/s5.html
+++ b/day14/p1/js/s5.html
@@ -1,79 +1,102 @@
 <!DOCTYPE html>
-<!-- 全选反选取消 -->
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-		<div>
-			<input type="button" value="全选" onclick="CheckAll()">
-			<input type="button" value="取消" onclick="ConcleAll()">
-			<input type="button" value="反选" onclick="ReverseAll()">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
 
-			<table border="1">
-				<thead>
-					<tr>
-						<th>序号</th>
-						<th>用户名</th>
-						<th>密码</th>
-					</tr>
-				</thead>
+    <div id="p1">
+        <p>hhh</p>
+    </div>
 
-				<tbody id = "i1">
-					<tr>
-						<td><input type="checkbox"/></td>
-						<td>内容一</td>
-						<td>内容二</td>
-					</tr>
-					<tr>
-						<td><input type="checkbox"/></td>
-						<td>内容一</td>
-						<td>内容二</td>
-					</tr>
-					<tr>
-						<td><input type="checkbox"/></td>
-						<td>内容一</td>
-						<td>内容二</td>
-					</tr>					
-				</tbody>
-			</table>
-		</div>
-		<script type="text/javascript">
-			function CheckAll(){
-				var tb = document.getElementById('i1');
-				var trs = tb.children;
-				for(var i=0;i<trs.length;i++){
-					var current_tr=trs[i];
-					var ck = current_tr.firstElementChild.firstElementChild;
-					ck.setAttribute('checked','checked');
-				}
-			}
+    <input type="button" value="全选" onclick="CheckAll()" />
+    <input type="button" value="取消" onclick="CancleAll()"/>
+    <input type="button" value="反选" onclick="ReverseAll()"/>
 
-			function ConcleAll(){
-				var tb = document.getElementById('i1');
-				var trs = tb.children;
-				for(var i=0;i<trs.length;i++){
-					var current_tr=trs[i];
-					var ck = current_tr.firstElementChild.firstElementChild;
-					ck.removeAttribute('checked');
-				}
-			}
-
-			function ReverseAll(){
-				var tb = document.getElementById('i1');
-				var trs = tb.children;
-				for(var i=0;i<trs.length;i++){
-					var current_tr=trs[i];
-					var ck = current_tr.firstElementChild.firstElementChild;
-					if(ck.checked){
-						ck.checked = false;
-						// ck.removeAttribute('checked')
-					}else{
-						ck.checked = true;
-						// ck.setAttribute('checked','checked')
-					}
-				}
-			}	
-		</script>
-    </body>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>序号</th>
+                <th>用户名</th>
+                <th>密码</th>
+            </tr>
+        </thead>
+        <tbody id="tb">
+            <tr>
+                <td><input type="checkbox" /></td>
+                <td>2</td>
+                <td>22</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" /></td>
+                <td>2</td>
+                <td>22</td>
+            </tr>
+             <tr>
+                <td><input type="checkbox" /></td>
+                <td>2</td>
+                <td>22</td>
+            </tr>
+            <tr>
+                <td><input type="checkbox" /></td>
+                <td>2</td>
+                <td>22</td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="jquery-1.12.4.js"></script>
+    <script>
+        function CheckAll(){
+            /*
+            var tb = document.getElementById('tb');
+            var trs = tb.children;
+            for(var i=0;i<trs.length;i++){
+                var current_tr = trs[i];
+                var ck = current_tr.firstElementChild.firstElementChild;
+                ck.setAttribute('checked','checked');
+            }
+            */
+            $('#tb input[type="checkbox"]').prop('checked',true);
+        }
+        function CancleAll(){
+            /*
+            var tb = document.getElementById('tb');
+            var trs = tb.children;
+            for(var i=0;i<trs.length;i++){
+                var current_tr = trs[i];
+                var ck = current_tr.firstElementChild.firstElementChild;
+                ck.removeAttribute('checked');
+            }
+            */
+            $('#tb input[type="checkbox"]').prop('checked',false);
+        }
+        function ReverseAll(){
+            /*
+            var tb = document.getElementById('tb');
+            var trs = tb.children;
+            for(var i=0;i<trs.length;i++){
+                var current_tr = trs[i];
+                var ck = current_tr.firstElementChild.firstElementChild;
+                if(ck.checked){
+                    ck.checked = false;
+                    ck.removeAttribute('checked');
+                }else{
+                    ck.checked = true;
+                    ck.setAttribute('checked', 'checked');
+                }
+            }
+            */
+            $('#tb input[type="checkbox"]').each(function(i){
+                // this  当前标签
+                // $(this)当前标签的jQuery对象
+                if($(this).prop('checked')){
+                    $(this).prop('checked', false);
+                }else{
+                    $(this).prop('checked', true);
+                }
+            });
+        }
+    </script>
+</body>
 </html>
