--- a/day17/111.html
+++ b/day17/111.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,8 +43,10 @@
 
     <script src="jquery-1.12.4.js"></script>
     <script>
+        function AAA() {
+            var val = $(this).val()
+        }
         function CheckValid(){
-
             $('form .c1').each(function () {
                 // 每一个元素执行次匿名函数
                 // this
