--- a/day17/s5.html
+++ b/day17/s5.html
@@ -61,7 +61,7 @@
     </table>
 
     <script src="jquery-1.12.4.js"></script>
-    <script src="edit_row.js"></script>
+    <script src="edit.js"></script>
 
 </body>
 
